discussion/kv_engine/179372/179372_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: Make KVBucket::ckptDestroyerTasks folly::Synchronized<T>

In preparatin for making checkpoint_destruction_tasks dynamic in EP
config.

Change-Id: I80ce6bd8780034c9802c723460264d3a6bedc4e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-31 08:55:42.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 09:12:27.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9543/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21091/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21091/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22889/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22889/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30181/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22152/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22152/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9642/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21800/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21800/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19848/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4012:57: error: no member named "rlock" in "std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >" [clang-diagnostic-error]
    ASSERT_EQ(GetParam(), getCheckpointDestroyerTasks().rlock->size());
                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2073:54: note: expanded from macro "ASSERT_EQ"
# define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2057:69: note: expanded from macro "GTEST_ASSERT_EQ"
  ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:168:40: note: expanded from macro "ASSERT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:55: error: no member named "rlock" in "std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >" [clang-diagnostic-error]
    const auto locked = getCheckpointDestroyerTasks().rlock();
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4061:16: error: redefinition of "locked" [clang-diagnostic-error]
    const auto locked = getCheckpointDestroyerTasks().rlock();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:16: note: previous definition is here
    const auto locked = getCheckpointDestroyerTasks().rlock();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4061:55: error: no member named "rlock" in "std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >" [clang-diagnostic-error]
    const auto locked = getCheckpointDestroyerTasks().rlock();
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:395:12: error: no viable conversion from returned value of type "folly::Synchronized<DestroyerList>" (aka "Synchronized<vector<std::shared_ptr<CheckpointDestroyerTask> > >") to function return type "const KVBucket::DestroyerList" (aka "const vector<std::shared_ptr<CheckpointDestroyerTask> >") [clang-diagnostic-error]
    return store->ckptDestroyerTasks;
           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:553:7: note: candidate constructor not viable: no known conversion from "folly::Synchronized<DestroyerList>" (aka "Synchronized<vector<std::shared_ptr<CheckpointDestroyerTask> > >") to "const std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > > &" for 1st argument
      vector(const vector& __x)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:572:7: note: candidate constructor not viable: no known conversion from "folly::Synchronized<DestroyerList>" (aka "Synchronized<vector<std::shared_ptr<CheckpointDestroyerTask> > >") to "std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > > &&" for 1st argument
      vector(vector&&) noexcept = default;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:625:7: note: candidate constructor not viable: no known conversion from "folly::Synchronized<DestroyerList>" (aka "Synchronized<vector<std::shared_ptr<CheckpointDestroyerTask> > >") to "initializer_list<std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >::value_type>" (aka "initializer_list<std::shared_ptr<CheckpointDestroyerTask> >") for 1st argument
      vector(initializer_list<value_type> __l,
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19848/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4012:57:
error: no member named "rlock" in "std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19848/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19069/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
